--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,9 @@ jobs:
         run: echo "Cache was restored"
 
       - name: Install python dependencies
-        run: uv pip install ../
+        run: |
+          uv pip install mkdocs-material
+          uv pip install ../
 
       - name: Setup build environment
         run: |
