--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ defaults:
 
 jobs:
   build:
+    name: ${{ (github.event_name == 'pull_request') && 'Test Build' || (github.event_name == 'workflow_dispatch' && inputs.test) && 'Test Build' || 'Build MkDocs' }}
     runs-on: ubuntu-latest
 
     steps:
