Add pre-commit and fix plugin lines

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ exclude = ["example*", "assets*", "build*"]
 [project.optional-dependencies]
 dev = [
   "ruff",
+  "pre-commit",
 ]
 
 [tool.ruff]
