--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
           echo "SITE_URL=https://${REPO_OWNER}.github.io/${REPO_NAME}" >> $GITHUB_ENV
 
       - name: Build documentation
-        run: uv run mkdocs build --site-dir site --strict
+        run: uv run --active mkdocs build --site-dir site --strict
         env:
           SITE_DESCRIPTION: ${{ github.event.repository.description }}
           SITE_AUTHOR: ${{ github.event.repository.owner.login }}
