--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,9 +52,7 @@ jobs:
         run: echo "Cache was restored"
 
       - name: Install python dependencies
-        run: |
-          uv pip install mkdocs-material
-          uv pip install -e ..
+        run: uv pip install -e ..
 
       - name: Setup build environment
         run: |
