--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
     hooks:
       - id: prettier
         language_version: system
-        files: "\\.(css)$"
+        files: "\\.(htm,html,css,js)$"
   - repo: https://github.com/standard/standard
     rev: v17.1.2
     hooks:
