--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,24 @@
 repos:
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.1.0
+    rev: 'v4.0.0-alpha.8'
     hooks:
       - id: prettier
         language_version: system
-        files: "\\.(htm|html|css|js)$"
+        files: \.(json|md|html|css|ya?ml)$
+        additional_dependencies:
+        - prettier@latest
+        - prettier-config-standard@latest
   - repo: https://github.com/standard/standard
     rev: v17.1.2
     hooks:
       - id: standard
         language_version: system
+        types: [javascript]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.0.285
+    rev: v0.11.13
     hooks:
-      - id: ruff
-        args: [--fix]
+      # Run the linter.
+      - id: ruff-check
+        args: [ --fix ]
+      # Run the formatter.
+      - id: ruff-format
