Enhances type safety and package initialization
Improves string reading with explicit UTF-8 encoding and adjusts
type annotations for better compatibility. Initializes CSS and JS
resource packages. Updates dependency management by reorganizing
dev dependencies in pyproject.toml, reflecting evolving project
structure and enhancing development workflow.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,17 @@ license = {text = "MIT"}
 authors = [
   {name = "Kaj Kowalski", email = "dev+mkdocs-exam@kjanat.com"},
 ]
+
 dependencies = [
   "mkdocs",
   "mkdocs-material",
+]
+
+[dependency-groups]
+dev = [
+  "ruff",
+  "pre-commit",
+  "pytest",
 ]
 
 [project.urls]
@@ -29,13 +37,6 @@ exclude = ["example*", "assets*", "build*"]
 
 [tool.setuptools.package-data]
 "mkdocs_exam" = ["css/*", "js/*"]
-
-[project.optional-dependencies]
-dev = [
-  "ruff",
-  "pre-commit",
-  "pytest",
-]
 
 [tool.ruff]
 line-length = 120
