Enhance theme configuration with color scheme toggles and improve exam CSS for better layout and accessibility

--- a/example/mkdocs.yml
+++ b/example/mkdocs.yml
@@ -22,7 +22,29 @@ theme:
   language: en
 
   palette:
-    scheme: default
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: blue
+      accent: blue
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: blue
+      accent: blue
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
 
   font:
     text: Roboto
